--- a/index.html
+++ b/index.html
@@ -28,22 +28,31 @@
 
 <section>
 
-<div id="centre" >
+	<div class="Bouton_acc">
+		<button id="Acceuil1" style="display: all;"> AFFICHER LES ÉLÉMENTS CENTRAUX</button>
+	</div>
 
-	<div> <img src="images/logogoogle.png " alt="logo"> </div> </br> </br> 
+<div id="centre" style="display: none;" >
 
-	<div> <form action="" class="formulaire">
-	               <input class="champ" type="text" />    
-	               </form>
-	</div> </br>
 
-	<div id="buttons" >
+	<div class="Acceuil2" >
+		
+			<img src="images/logogoogle.png " alt="logo"> </div> </br> </br> 
+		
+
+		<div> <form action="" class="formulaire">
+		        <input id="Search" class="champ" type="text" />    
+		      </form>
+		</div> </br>
+
+		<div id="buttons" >
+			 
+			<div> <button class="button2" size="30" >Recherche Google</button>
+		 	</div>
+			<div> <button class="button2">J'ai de la chance</button> 
+			</div>
 		 
-		<div> <button class="button2" size="30" >Recherche Google</button>
-	 	</div>
-		<div> <button class="button2">J'ai de la chance</button> 
 		</div>
-	 
 	</div>
 
 </div>
@@ -78,6 +87,8 @@
 
 </footer>
 
+
+	<script src="main.js"></script>
 </body>
 
 
